Estrutura de repetição com tabela de cores

--- a/2-20042022/css/style.css
+++ b/2-20042022/css/style.css
@@ -16,5 +16,17 @@
 }
 
 #miniatura img:hover{
-    transform: scale(1.5);
+    transform: scale(1.1);
+}
+
+#painel {
+    display: fixed;
+    top: 0;
+    left: 10%;
+    width: 600px;
+    height: 500px;
+    margin-left: 30%;
+}
+#painel img {
+    width: 100%;
 }
